# Design_Patterns

./: CMakeLists.txt
10Singleton Pattern/: a.cpp  uml.txt
11Facade Pattern/: Facade.hpp  SubSystem.hpp  a.cpp  uml.txt
1Template Method/: All_profession.hpp  a.cpp  mage.hpp  priest.hpp  uml.txt  warrior.hpp
2Simple Factory/: M_Element.hpp  M_Mechanic.hpp  MonsterFactory.hpp  a.cpp  uml.txt
3Polymorphic Factory/: ElementFactory.hpp  Factory.hpp  M_Undead.hpp  MechanicFactory.hpp  Monster.hpp  UndeadFactory.hpp  a.cpp  uml.txt
4Abstract Factory/: Monster.hpp  a.cpp  uml.txt
5Prototype Pattern/: Factory.hpp  Monster.hpp  a.cpp  uml.txt
6Builder Pattern/: 工作日报.md  新建 文本文档.html
6Builder Pattern/1/: Builder.hpp  Director.hpp  Monster.hpp  a.cpp  uml.txt
6Builder Pattern/2/: Builder.hpp  Data.hpp  Director.hpp  ProcessFile.hpp  Product.hpp  a.cpp  init_html.txt  input.txt  output.html  output.md
7Strategy Pattern/: Profession.h  Profession.hpp  Strategy.h  Strategy.hpp  a.cpp  uml.txt
8Observer Pattern/: Notifier.cpp  Notifier.h  Profession.cpp  Profession.h  a.cpp  uml.txt
9Decorator Pattern/: Control.cpp  Control.h  Decorator.cpp  Decorator.h  a.cpp  uml.txt
