cmake_minimum_required(VERSION 3.27)
project(FP)

set(CMAKE_CXX_STANDARD 17)

add_executable(program
#        "1Template Method/a.cpp"
#        "1Template Method/warrior.hpp"
#        "1Template Method/priest.hpp"
#        "1Template Method/mage.hpp"
#        "1Template Method/All_profession.hpp"
#
#        "2Simple Factory/a.cpp"
#        "2Simple Factory/MonsterFactory.hpp"
#        "2Simple Factory/Monster.hpp"
#        "2Simple Factory/M_Undead.hpp"
#        "2Simple Factory/M_Element.hpp"
#        "2Simple Factory/M_Mechanic.hpp"
#
#        "3Polymorphic Factory/a.cpp"
#        "3Polymorphic Factory/Factory.hpp"
#        "3Polymorphic Factory/Monster.hpp"
#        "3Polymorphic Factory/M_Undead.hpp"
#        "3Polymorphic Factory/M_Mechanic.hpp"
#        "3Polymorphic Factory/M_Element.hpp"
#        "3Polymorphic Factory/MechanicFactory.hpp"
#        "3Polymorphic Factory/UndeadFactory.hpp"
#        "3Polymorphic Factory/ElementFactory.hpp"
#
#        "4Abstract Factory/a.cpp"
#        "4Abstract Factory/Factory.hpp"
#        "4Abstract Factory/Monster.hpp"
#
#        "5Prototype Pattern/a.cpp"
#        "5Prototype Pattern/Factory.hpp"
#        "5Prototype Pattern/Monster.hpp"
#
#        "6Builder Pattern/1/a.cpp"
#        "6Builder Pattern/1/Monster.hpp"
#        "6Builder Pattern/1/Builder.hpp"
#        "6Builder Pattern/1/Director.hpp"
#
#        "6Builder Pattern/2/a.cpp"
#        "6Builder Pattern/2/Product.hpp"
#        "6Builder Pattern/2/Builder.hpp"
#        "6Builder Pattern/2/Director.hpp"

#        "6Builder Pattern/2/ProcessFile.hpp"
#        "6Builder Pattern/2/Data.hpp"
#
#        "7Strategy Pattern/a.cpp"
#        "7Strategy Pattern/Profession.hpp"
#        "7Strategy Pattern/Strategy.hpp"
#        "7Strategy Pattern/Profession.h"
#        "7Strategy Pattern/Strategy.h"
#
#        "8Observer Pattern/a.cpp"
#        "8Observer Pattern/Profession.cpp"
#        "8Observer Pattern/Profession.h"
#        "8Observer Pattern/Notifier.cpp"
#        "8Observer Pattern/Notifier.h"
#
#        "9Decorator Pattern/a.cpp"
#        "9Decorator Pattern/Control.cpp"
#        "9Decorator Pattern/Control.h"
#        "9Decorator Pattern/Decorator.cpp"
#        "9Decorator Pattern/Decorator.h"
#
#        "10Singleton Pattern/a.cpp"

        "11Facade Pattern/a.cpp"
        "11Facade Pattern/SubSystem.hpp"
        "11Facade Pattern/Facade.hpp"
)
